PostGIS 3.4.5dev
xxxx/xx/xx

PostgreSQL 12-17 required. GEOS 3.6+ required but GEOS 3.12+ to take advantage of all features.
Proj 6.1+ required.

* Bug Fixes *

  - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
  - Do not complain about illegal option when calling shp2pgsql -?
  - #5564, BRIN crash fix and support for parallel in PG17+
          (Paul Ramsey, Regina Obe)
  - #5876, Fix ST_AddPoint with empty point argument
  - #5874, Line substring returns wrong answer (Paul Ramsey)
  - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
  - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
  - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)

PostGIS 3.4.4
2024/12/22

PostgreSQL 12-17 required. GEOS 3.6+ required but GEOS 3.12+ to take advantage of all features.
Proj 6.1+ required.

* Bug Fixes *

  - [topology] Quote-protect output paths of pgtopo_export (Sandro Santilli)
  - #5785, [raster] ST_MapAlgebra segfaults when expression references
           a supernumerary rast argument (Dian M Fay)
  - #5787, [topology] Check that ST_ChangeEdgeGeom doesn't change winding of rings
           (Sandro Santilli)
  - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology
          (Björn Harrtell)
  - #5677, Retain SRID during unary union (Paul Ramsey)
  - #5790, Non-schema qualified calls causing issue with
           materialized views (Regina Obe)

* Enhancements *

  - #5782, Improve robustness of min distance calculation (Sandro Santilli)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)


PostGIS 3.4.3
2024/09/04

* Bug Fixes *

 - #5766, Always report invalid non-null MBR of universal face (Sandro Santilli)
 - #5709, Fix loose mbr in topology.face on ST_ChangeEdgeGeom (Sandro Santilli)
 - #5698, Fix robustness issue splitting line by vertex very close to endpoints,