@@ -7,6 +7,7 @@ Proj 6.1+ required.
 * Bug Fixes *
 
   - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
+  - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
   - Do not complain about illegal option when calling shp2pgsql -?
   - #5564, BRIN crash fix and support for parallel in PG17+
           (Paul Ramsey, Regina Obe)
@@ -15,6 +16,7 @@ Proj 6.1+ required.
   - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
   - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
   - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
+
 
 PostGIS 3.4.4
 2024/12/22
